Add generators and persistence workers for every factory Disable oracle repositories for now